--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 src/Universal_Robots_ROS2_Description/
 src/Universal_Robots_ROS2_GZ_Simulation/
 src/ros2_robotiq_gripper/
+log/
+install/
+build/
+
